...
                  orElse: () {});
            },
          )
        ],
        child: Scaffold(
          appBar: AppBar(
            title: const Text('Shops'),
            leading: IconButton(
              key: const Key('Keys.logout'),
              icon: const Icon(Icons.exit_to_app),
              onPressed: () {
                context.read<AuthBloc>().add(
                      const AuthEvent.signedOut(),
                    );
              },
...
