class Keys {
  static const yes = 'flat-button-yes';
  static const no = 'flat-button-no';
  static const back = 'icon-button-arrow-back';
  static const buttonChangePage = 'button-change-page';
  static const numOfWorkesField = 'number-of-worker-field';
  static const logout = 'icon-button-sign-out';
  static const emailField = 'email-field';
  static const nameField = 'name-field';
  static const keeperField = 'keeper-field';
  static const phoneField = 'phone-field';
  static const houseNumberField = 'house-number-field';
  static const passwordField = 'password-field';
}
